[tool.poetry]
name = "cemrg-wearable"
version = "0.1.0"
description = ""
authors = ["Jose Alonso Solis Lemus <jsolisle@ic.ac.uk>"]
readme = "README.md"
packages = [{include = "cemrg_wearable"}]

[tool.poetry.dependencies]
python = "^3.7"
pandas = {version = "^2.2.2", python = "3.11"}
matplotlib = {version = "^3.9.0", python = "3.11"}
bs4 = {version = "^0.0.2", python = "3.11"}
requests = {version = "^2.32.3", python = "3.11"}
numpy = {version = "^2.0.0", python = "3.11"}
seaborn = {version = "^0.13.2", python = "3.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
